--- a/2.Geometry/5.Rays.md
+++ b/2.Geometry/5.Rays.md
@@ -1,14 +1,16 @@
-# 5.1 变量
-## 5.1.1. Point3f o;
-原点
-## 5.1.2. Vector3f d;
-方向
-## 5.1.3. mutable Float tMax;
-射线的最大长度, mutable 可以使得 tMax 在当射线以 const Ray& 形式传入函数的时候也可以被改变
-## 5.1.4. Float time;
-当有动画的时候有用? 暂时先不管
-## 5.1.5. const Medium *medium;
-介质, 这在光线从一种介质进入另一种介质的时候会有作用
+# 5.1 公有成员变量
+```c++
+Point3f o; // 原点
+Vector3f d; // 方向
+mutable Float tMax; // 射线的最大长度
+Float time; // ?
+const Medium *medium; // 介质
+```
+其中 **mutable** 可以使得 tMax 在当射线以 const Ray& 形式传入函数的时候也可以被改变.
+
+**time** 当有动画的时候有用? 暂时先不管.
+
+**medium** 介质, 这个属性在光线从一种介质进入另一种介质的时候会有作用.
 
 # 5.2 方法
 Ray 类重载了括号运算符, 用来计算沿着射线方向移动 t 长度的点的坐标.
