--- a/2.Geometry/10.Interaction.md
+++ b/2.Geometry/10.Interaction.md
@@ -18,4 +18,16 @@ MediumInterface mediumInterface;; // 介质
 **wo** 表示的是计算某一点光照时的出射光线 $\omega_o$
 
 # 10.3 SURFACE INTERACTION
-asdf
+这个结构用来表示表面上一个特定点的信息, 这个点一般是射线与平面的交点. 这个结构的作用在于让很多系统可以处理这个交点而不需要考虑形状本身.
+
+## 10.3.1 独有的成员变量
+```c++
+Point2f uv; // uv
+Vector3f dpdu, dpdv; // 位置的参数偏导数
+Normal3f dndu, dndv; // 法线的偏导数
+const Shape* shape = nullptr; // 点所在形状的指针
+```
+位置的参数偏导数含义如下图所示, $\delta p/\delta u$ 和 $\delta p/\delta v$ 位于切平面上, 我们可以根据 $\delta p/\delta u$ 和 $\delta p/\delta v$ 的叉乘计算出表面的法线.
+
+![2.1](\figures/2.1.png)
+
