--- a/3.Shape/2.Sphere.md
+++ b/3.Shape/2.Sphere.md
@@ -1,21 +1,20 @@
 # 2.1 表示方式
 ## 2.1.1二次方程形式
-对于球心在原点的单位圆来说就是`$x^2+y^2+z^2-1=0$`
+对于球心在原点的单位圆来说就是$x^2+y^2+z^2-1=0$
 
 ## 2.1.2参数方程
-对于球心在原点半径为r的球来说就是
-$$
-x = r\sin\theta\cos\phi \\
-y = r\sin\theta\sin\phi \\
-z = r\cos\theta \\
-$$
+对于球心在原点半径为r的球来说参数方程如下, 其中 $\theta$ 和 $\phi$ 如图所示.
 
-我们可以将`$f(θ, φ)$`转换成另一个函数`$f(u, v)$`, 这个表示在使用纹理的时候回更加有用
+$x = r\sin\theta\cos\phi$ \
+$y = r\sin\theta\sin\phi$ \
+$z = r\cos\theta$
 
-$$
-\phi = u\phi_{max} \\
-\theta = \theta_{min} + v(\theta_{mmax} - \theta_{min})
-$$
+![3.1](\figures/3.1.png)
+
+我们可以将$f(\theta, \phi)$转换成另一个函数$f(u, v)$, 这个表示在使用纹理的时候回更加有用
+
+$\phi = u\phi_{max}$ \
+$\theta = \theta_{min} + v(\theta_{mmax} - \theta_{min})$
 
 ---
 
@@ -59,13 +58,11 @@ bool Sphere::Intersect(const Ray &r, Float *tHit, SurfaceInteraction *isect, boo
 <将射线转换到 object space>: 由于我们的球定义在 object space, 也就是球心在原点, 半径为r. 所以在计算球与射线相交的时候首先要做的是将射线转换球所在的坐标空间.
 
 <计算二次方程系数>: 判断球与射线的相交其实就是求交点, 我们有射线 $r = \vec{o} + t\vec{d}$ 和圆 $x^2+y^2+z^2-1=0$, 将他们联立我们可以得到一个关于t的二次方程 $at^2+bt+c=0$, 其中:
-$$
-\begin{aligned}
-&a=d_x^2+d_y^2+d_z^2 \\
-&b=2(d_xo_x+d_yo_y+d_zo_z) \\
-&c=o_x^2+o_y^2+o_z^2-r^2 \\
-\end{aligned}
-$$
+
+$a=d_x^2+d_y^2+d_z^2$ \
+$b=2(d_xo_x+d_yo_y+d_zo_z)$ \
+$c=o_x^2+o_y^2+o_z^2-r^2$
+
 
 <解方程>: 接下来我们解上面得到的一元二次方程. 如果无解则说明不相交; 否则得到两个解 t0 和 t1, 其中 t0 <= t1. 当 0 < t < r.tMax 时, 射线与球才相交.
 
@@ -102,7 +99,3 @@ Float Sphere::Area() const {
 }
 ```
 二次表面的表面积计算可以通过积分来推导, 推导过程参考 Physically Based Rending Third Edition 3.2.5
-
-**TODO**
-
-偏导数的概念、计算与几何意义
