Update Interaction. Add Primitive

--- a/2.Geometry/10.Interaction.md
+++ b/2.Geometry/10.Interaction.md
@@ -25,7 +25,13 @@ MediumInterface mediumInterface;; // 介质
 Point2f uv; // uv
 Vector3f dpdu, dpdv; // 位置的参数偏导数
 Normal3f dndu, dndv; // 法线的偏导数
+struct {
+	Normal3f n;
+	Vector3f dpdu, dpdv;
+	Normal3f dndu, dndv;
+} shading;
 const Shape* shape = nullptr; // 点所在形状的指针
+const Primitive *primitive = nullptr; // 与射线相交的图元的指针
 ```
 位置的参数偏导数含义如下图所示, $\delta p/\delta u$ 和 $\delta p/\delta v$ 位于切平面上, 我们可以根据 $\delta p/\delta u$ 和 $\delta p/\delta v$ 的叉乘计算出表面的法线.
 
