更新 BVH 创建流程

--- a/4.Acceleration/3.bvh.md
+++ b/4.Acceleration/3.bvh.md
@@ -32,9 +32,13 @@ for (size_t i = 0; i < primitives.size(); ++i)
 	primitiveInfo[i] = { i, primitives[i]->WorldBound() };
 ```
 
-接下来就可以开始递归构造过程了.
+接下来就可以开始递归构造过程了. 其中当划分方法是 SplitMethod::HLBVH 的时候会调用另一个特殊构建函数(HLBVHBuild), 其他方法都是调用 recursiveBuild 构建 BVH 树. 接下来我们也是先讨论 recursiveBuild 方法.
 
-其中 MemoryArena 用来管理内存, totalNodes 指明了树节点的数量, root 为树的根节点, orderedPrims 是树构造之后返回的新的图原数组. orderedPrims 中的图元是排序的, 叶子节点中的图元占据了数组中连续的范围. 最后原始图原数组会被 orderedPrims 代替.
+其中 MemoryArena 用来管理内存, totalNodes 指明了树节点的数量, root 为树的根节点, orderedPrims 是树构造之后返回的新的图元数组. orderedPrims 中的图元是排序的, 叶子节点中的图元占据了数组中连续的范围. 最后原始图元数组会被 orderedPrims 代替.
+
+```c++
+enum class SplitMethod { SAH, HLBVH, Middle, EqualCounts };
+```
 
 ```c++
 // 使用 primitiveInfo 为图元构造 BVH 树
@@ -50,9 +54,7 @@ else
 primitives.swap(orderedPrims);
 ```
 
-BVHBuildNode 表示 BVH 树的一个节点, 每个节点都保存了一个包围盒, 这个包围盒表示了该节点下所有节点的边界. 每个节点还会保存两个指向其自身子节点的指针. Interior nodes also record the coordinate axis
-along which primitives were partitioned for distribution to their two children; this
-information is used to improve the performance of the traversal algorithm. 叶节点中需要记录哪些图元存储在其中, 这些图元利用有一个偏移量和一个数量来表示, 所以原始图原数组是需要重新排序的. 另外我们通过一个节点的 children 是否为空来区分内部节点和叶节点.
+BVHBuildNode 表示 BVH 树的一个节点, 每个节点都保存了一个包围盒, 这个包围盒表示了该节点下所有节点的边界. 每个节点还会保存两个指向其自身子节点的指针. 内部节点还会保存其子节点被划分时选择的轴向, 这个信息可以提高遍历的表现. 叶节点中需要记录哪些图元存储在其中, 这些图元利用一个偏移量和一个数量来表示, 所以原始图元数组是需要重新排序的. 另外我们通过一个节点的 children 是否为空来区分内部节点和叶节点.
 
 ```c++
 struct BVHBuildNode {
@@ -109,7 +111,9 @@ BVHBuildNode *BVHAccel::recursiveBuild(MemoryArena &arena,
 	Bounds3f bounds;
 	for (int i = start; i < end; ++i)
 		bounds = Union(bounds, primitiveInfo[i].bounds);
+```
 
+```c++
 <创建叶节点>≡
 	int firstPrimOffset = orderedPrims.size();
 	for (int i = start; i < end; ++i) {
@@ -122,6 +126,8 @@ BVHBuildNode *BVHAccel::recursiveBuild(MemoryArena &arena,
 
 对于内部节点, 我们首先需要将图元进行划分, 进而构造两颗子树. 在构造 BVH 时通常会沿某一个轴向进行划分. 对于有当前图元集合, 可以选择具有最大包围盒质心范围的轴向. 对于下图的二维环境中, 沿 y 轴具有最大范围, 因此图元将沿着 y 轴进行划分.
 
+我们划分过程的主要目标是两个子集的包围盒交叉尽可能的小, 否则在遍历的时候可能会需要频繁的遍历两个子树. 稍后我们会将这个图元划分理念以更为严格的方式予以确定(启发式表面积, surface area heuristic)
+
 ![图元划分](figures/4.2.png)
 
 ```c++
@@ -131,4 +137,63 @@ BVHBuildNode *BVHAccel::recursiveBuild(MemoryArena &arena,
 		centroidBounds = Union(centroidBounds, primitiveInfo[i].centroid);
 
 	int dim = centroidBounds.MaximumExtent();
+```
+
+如果所有的图元中心都在相同的位置, 则递归停止. 在这种特殊情况下, 我们并没有很好的方法去进行图元的划分. 这些图元将会被保存到一个叶节点中. 而通常情况下, 我们会根据特定的划分方法将图元划分为两个子集并进行两次递归.
+
+```c++
+<将图元分为两部分并创建子节点>≡
+	int mid = (start + end) / 2;
+	if (centroidBounds.pMax[dim] == centroidBounds.pMin[dim]) {
+		<创建叶节点>
+	} else {
+		<基于 splitMethod 划分图元>
+		node->InitInterior(dim,
+			recursiveBuild(arena, primitiveInfo, start, mid, totalNodes, orderedPrims),
+			recursiveBuild(arena, primitiveInfo, mid, end, totalNodes, orderedPrims));
+	}
+```
+
+<基于 splitMethod 划分图元> 的代码片段这里不再展示, 根据不同的 splitMethod 后面会具体讨论相应的划分策略.
+
+一种简单的策略就是 SplitMethod::Middle. 他会计算当前所有图元整体的包围盒在划分轴向上的中点, 然后将中点一侧的图元划分为一个子集, 另一侧的图元划分为另一个子集. 如果图元的包围盒交叉非常严重, 那么这种划分方式可能会失败( mid == start || mid == end ??? 怎么会出现这种情况 ???). 这时算法会退化为 SplitMethod::EqualCounts, 这个划分策略更为简单, 将图元中心在划分轴向上较小的一半分为一个子集, 较大的一半分为另一个子集.
+
+对于下图(a)中的情况 SplitMethod::Middle 工作良好. 而对于(b)的情况, 这时 SplitMethod::Middle 只能算作次优解, 明显以(c)的方式进行划分, 两颗子树不存在交叉, 而且包围盒也更小. 同样的 SplitMethod::EqualCounts 也不能更好的工作.
+
+![Middle策略分析](figures/4.4.png)
+
+SplitMethod::Middle 和 SplitMethod::EqualCounts 在 pbrt 中都使用 c++ 标准库函数予以实现.
+SplitMethod::Middle 使用 std::partition. 而 SplitMethod::EqualCounts 使用 std::nth_element.
+
+```c++
+<SplitMethod::Middle 划分>≡
+	Float pmid = (centroidBounds.pMin[dim] + centroidBounds.pMax[dim]) / 2;
+	BVHPrimitiveInfo *midPtr =
+	std::partition(
+		&primitiveInfo[start],
+		&primitiveInfo[end-1]+1,
+		[dim, pmid](const BVHPrimitiveInfo &pi) {
+			return pi.centroid[dim] < pmid;
+	});
+
+	// 将返回的中间图元指针换算为偏移.
+	mid = midPtr - &primitiveInfo[0];
+
+	// 划分策略在整个构建函数中处于一个 switch 语句的不同 case 中,
+	// 策略失败时跳过 break 则会进入到下一级策略中, 也就是 SplitMethod::EqualCounts
+	// 但是为什么会出现失败的情况 ????
+	if (mid != start && mid != end)
+		break;
+```
+
+```c++
+<SplitMethod::EqualCounts 划分>≡
+	mid = (start + end) / 2;
+	std::nth_element(
+		&primitiveInfo[start],
+		&primitiveInfo[mid],
+		&primitiveInfo[end-1]+1,
+		[dim](const BVHPrimitiveInfo &a, const BVHPrimitiveInfo &b) {
+			return a.centroid[dim] < b.centroid[dim];
+	});
 ```
