--- a/4.Acceleration/3.bvh.md
+++ b/4.Acceleration/3.bvh.md
@@ -254,4 +254,14 @@ LBVH 是通过使用位于每个空间区域中点处的分割平面来分割图
 
 ## 1.3 遍历过程中的紧凑型 BVH
 
+为了提高性能, 我们最后还需要将树结构转换为一种更加紧凑的表达形式. 对已经构建完成的 BVH 树, 我们对其进行深度优先遍历, 然后将遍历到的节点依次存储在一个数组中即可.
+
+根据深度优先遍历, 如下图所示, 我们可以看出对于一个内部节点(图中 A, B), 其第一个子节点在数组中一定紧随其后, 而第二个子节点的位置需要我们通过一个偏移量来获取. 幸运的是这个偏移量在我们进行树的遍历的过程中会非常容易且自然的计算出来.
+
+![树的紧凑表达](figures/4.9.png)
+
+---
+
+## 1.4 遍历
+
 待更新...
