--- a/4.Acceleration/3.bvh.md
+++ b/4.Acceleration/3.bvh.md
@@ -264,4 +264,10 @@ LBVH 是通过使用位于每个空间区域中点处的分割平面来分割图
 
 ## 1.4 遍历
 
-待更新...
+我们将树转化成为数组之后遍历的过程就和想象中一样, 利用偏移来确定接下来要和那颗子树进行相交测试. 这里具体的实现细节没有特殊的地方, 下面着重说一下之前提到的记录分割轴向的意义.
+
+1.3节展示的树, 我们假设图元在二维平面的分布状况如下图所示, 那么根节点A记录的划分轴向是 **y**. 对于图中的红色射线, 遍历的过程中我们首先判断出射线与 A 相交, 那么接下来需要依次再和 A 的两颗子树进行相交测试. 但是我们先测试左子树还是右子树呢? 这时记录在节点 A 中的分割轴向就起到了作用. 我们知道节点 A 在 y 轴方向上被分割为两部分, 而射线指向 y 轴的负方向, 那么如图所示的一般情况下, 射线会先与右子树相交, 所以我们也先测试射线与 A 的右子树的相交性.
+
+这样做的意义在于如果射线与 A 的右子树相交, 那么这时射线会更新自身的 *tMax*. 这样在之后与其左子树进行相交测试的时候就可以快速的退出相交测试, 避免无用的计算(因为如果相交的话我们还需要计算很多相交处的表面信息).
+
+![遍历](figures/4.10.png)
