--- a/1.Introduction/3.pbrt-overview.md
+++ b/1.Introduction/3.pbrt-overview.md
@@ -58,3 +58,13 @@ Whitted 积分器通过递归的计算反射和折射光线的辐射度来工作
 对于交点如下图所示, 射线与平面的交点为 p, 交点处的法线为 n, 我们需要计算反射辐射度的方向为 $\omega_o$, 其方向刚好是入射方向的反向(书中使用 $\omega$ 表示 Normalized 之后的方向向量, 代码使用 wo 表示 $\omega_o$).
 
 ![光线交点](figures/1.3.png)
+
+其中 Li 方法的步骤如下:
+
+1. 寻找射线最近的交点(如果没有则返回背景的辐射度)
+2. 计算交点处的自发光和反射光
+   1. 初始化 Whitted 积分器所需的公共变量: 法线和出射方向 $\omega_o$.
+   2. Compute scattering functions for surface interaction.
+   3. 如果交点恰好是一个区域光源则计算自发光.
+   4. 计算场景中每一个光源的贡献
+   5. 如果没有到达最大迭代深度则继续计算反射和折射
