更新: Radiometry Flux

--- a/5.Color&Radiometry/4.Radiometry.md
+++ b/5.Color&Radiometry/4.Radiometry.md
@@ -32,3 +32,29 @@ $$
 Q = \frac{hc}{\lambda} \\
 光速 c \approx 299,472,458 m/s, 普朗克常量 h \approx 6.626 * 10^{-34} m^2kg/s
 $$
+
+### 2.2 通量 Flux
+
+通量也被称为功率, 他表示在单位时间内通过一个表面或空间中某个区域的总能量. 辐射通量可以利用下式计算:
+
+$$
+\Phi = \lim_{\Delta t \to 0}\frac{\Delta Q}{\Delta t}=\frac{dQ}{dt}
+$$
+
+通量的单位是焦耳每秒( J/s ), 或者更常用的瓦特( W ).
+
+相反, 我们也可以根据时间的积分来求出一段时间内的总能量:
+
+$$
+Q=\int_{t1}^{t2}\Phi(t)dt
+$$
+
+需要留意的是在其他问题上, 因为光子实际上是离散的量子, 对时间微分是没有意义的. 但是对于渲染而言, 相对于我们关注的测量范围内光子的数量足够巨大, 在实践中这个细节不会产生问题. (*Note that our notation here is slightly informal: among other issues, because photons are actually discrete quanta, it’s not really meaningful to take limits that go to zero for differential time. For the purposes of rendering, where the number of photons is enormous with respect to the measurements we’re interested in, this detail isn’t problematic in practice.*)
+
+我们通常用通量来描述一个光源发射的总能量, 下图展示了通量的含义. 值得注意的是虽然在较大的球上每一个小区域所通过的能量都要比小球上相应的区域少, 但是因为面积的补偿, 通过两个球面的总能量实际上的相等的.
+
+![通量](figures/5.4.1.png)
+
+### 2.3 入射辐射度/出射辐射度 Irradiance and Radiant Exitance
+
+待更新 ...
