更新: 辐射度

--- a/5.Color&Radiometry/4.Radiometry.md
+++ b/5.Color&Radiometry/4.Radiometry.md
@@ -57,4 +57,117 @@ $$
 
 ### 2.3 入射辐射度/出射辐射度 Irradiance and Radiant Exitance
 
-待更新 ...
+给定一个有限的面 *A*, 我们可以将 $E=\Phi / A$ 定义为这个面的平均功率密度. 这个值是 Irradiance( *E*, 到达表面的通量面密度 ), 也是 Radiant Exitance ( *M*, 离开表面的通量面密度 ). 其单位是瓦特每平方米( $W/m^2$ ).
+
+比如 2.2 提到的点光源, 在外圈的入射辐射度就要比内圈的入射辐射度小. 假设这个点光源在各个方向上的亮度的是相等的, 那么其入射辐射度 *E* 如下:
+
+$$
+E=\frac{\Phi}{4{\pi}r^2}
+$$
+
+这个式子也解释了为什么点光源会以距离平方的速度衰减.
+
+我们也可以根据极限来定义某一点 *P* 上微分面元的入射辐射度, 从而获得更一般的形式:
+
+$$
+E(p)=\lim_{\Delta A \to 0}\frac{\Delta \Phi(p)}{\Delta A}=\frac{d\Phi (p)}{dA}
+$$
+
+同样的, 我们也可以再对面积积分得到功率 $\Phi$:
+
+$$
+\Phi = \int_{A}E(p)dA
+$$
+
+入射辐射度公式则可以帮助我们了解**兰伯特定律**( *Lambert's Law* ) 的由来. 兰伯特定律: 光线到达表面的能量与光线方向和表面法线方向夹角的余弦值成正比. 如下图, 假设一束均匀的平行光照射表面, 当光线方向与平面法线方向产生一定角度的时候, 接受光线的表面积变大了, 所以入射辐射度会相应减少.
+
+![Lambert](figures/5.4.2.png)
+
+### 2.4 立体角和强度 Solid Angle and Intensity
+
+为了定义强度我们首先需要定义立体角. 立体角实际上是 2D 中平面角的扩展, 如下图所示, 平面角是在某一位置上包围某个物体所需要的角度. 考虑单位圆的情况, 图中投影的弧长 s 即为平面角, 其单位是弧度( *radians* ).
+
+*PS: 平面角的定义: $d\theta = ds/r$*
+
+![平面角](figures/5.4.3.png)
+
+立体角就是上述平面角在 3D 空间中的扩展, 将一个物体投影到空间某处的单位球上所得的面积就是所求的立体角, 其单位是球面度( *steradians*, *sr* ).
+
+*PS: 立体角的定义: $d\omega = dA/r^2$*
+
+![立体角](figures/5.4.4.png)
+
+球心位于 p 点的单位球上的点集可以用来描述起点在 p 点的向量. 我们通常使用 $\omega$ 来表示这些方向, 并默认 $\omega$ 是标准化向量. 那么现在考虑将一个均匀的点光源放进一个单位球中, 那么我们可以利用强度( *Intensity* )来衡量发射功率的角密度( *angular density* ),其单位是瓦特每球面度( W/sr ). 强度 I 如下:
+
+$$
+I = \frac{\Phi}{4\pi}
+$$
+
+这个式子我们也可以使用方向上微分锥的极限将其转换为更一般的形式:
+
+$$
+I = \lim_{\Delta \omega \to 0}\frac{\Delta \Phi}{\Delta \omega} = \frac{d\Phi}{d\omega}
+$$
+
+相应的, 通过所有方向上的积分我们可以得到功率
+
+$$
+\Phi = \int_{\Omega}I(\omega)d\omega
+$$
+
+强度可以描述光在不同方向上的分布, 但是这是对点光源有意义.
+
+### 2.5 辐射度 Radiance
+
+最后, 我们来介绍辐射度测量中最重要的量: 辐射度 *L*. 入射辐射度和出射辐射度为我们提供了在某一点上每个微分面元上的通量, 但是他们没有考虑在方向上的分布. 辐射度则对此加以考量, 其定义如下:
+
+$$
+L(p, \omega) = \lim_{\Delta \omega \to 0}\frac{\Delta E_\omega(p)}{\Delta \omega} = \frac{dE_\omega(p)}{d\omega}
+$$
+
+其中 $E_\omega$ 表示与 $\omega$ 方向垂直的表面的入射辐射度. 换句话说辐射度并不是在衡量 p 所在的表面的入射辐射度, 这有助于消除兰伯特定律中的余弦项.
+
+辐射度表示单位面积, 单位立体角上的通量密度.
+
+$$
+L = \frac{d\Phi}{d\omega dA^{\perp}}
+$$
+
+![垂直微分面元](figures/5.4.5.png)
+
+---
+
+## 3. 入射和出射辐射度函数 Incident and Exitant Radiance Functions
+
+PS: **注意这里讨论的内容并不是入射辐射度/出射辐射度**
+
+当光与场景中的表面相互作用时, 辐射度函数通常在表面边界上不连续. 在完全不透明表面 ( 例如镜子 ) 的最极端情况下, 略高于表面和略低于表面的辐射度函数可能完全不相关. 因此在不连续出对单侧进行积分以区分上下表面是有意义的.
+
+$$
+L^+(p, \omega) = \lim_{t \to 0^+}L(p + t \vec{n_p}, \omega) \\
+L^-(p, \omega) = \lim_{t \to 0^-}L(p + t \vec{n_p}, \omega)
+$$
+
+然而在文本中始终用这种方式来表达这个概念是不必要的麻烦, 所以我们使用到达某一点的辐射度( 光源照亮表面 )和离开某一点的辐射度( 表面反射 )来解决这个问题. 如下图 $L_i(p, \omega)$ 表示到达 p 点的辐射度, $L_o(p, \omega)$ 表示 p 点反射的辐射度. 注意在这里的 $\omega$ 始终指向远离 p 点的方向.
+
+![辐射度函数](figures/5.4.6.png)
+
+$L_i(p, \omega)$ 和 $L_o(p, \omega)$ 也可以使用上面的公式来表述:
+
+$$
+\begin{aligned}
+
+L_i(p, \omega) &=
+\begin{cases}
+L^+(p, -\omega), &\omega \cdot \vec{n_p} > 0 \\
+L^-(p, -\omega), &\omega \cdot \vec{n_p} < 0
+\end{cases} \\
+
+L_o(p, \omega) &=
+\begin{cases}
+L^+(p, \omega), &\omega \cdot \vec{n_p} > 0 \\
+L^-(p, \omega), &\omega \cdot \vec{n_p} < 0
+\end{cases}
+
+\end{aligned}
+$$
