更新: 表面反射

--- a/5.Color&Radiometry/6.SurfaceReflection.md
+++ b/5.Color&Radiometry/6.SurfaceReflection.md
@@ -1,8 +1,8 @@
 # 表面反射
 
-当光线照射到表面的时候, 表面会散射光线, 将其中一部分光反射回环境中. 这里需要两种模型来描述这种反射: 反射光光谱的分布和方向的分布. 比如柠檬皮, 他主要吸收蓝色波长的光而反射红色和绿色波长的光, 所以当用白色光照射他时其最终呈现为黄色. 而皮肤则几乎在任何方向上都具有相同的颜色, 只在某一区域会出现一个高亮的部分. 与之相反从镜子中的点反射的光几乎完全取决于观察方向. 因为次表面反射现象的存在, 像皮肤, 树叶, 蜡等材质在反射上则更为复杂.
+当光线照射到表面的时候, 表面会散射光线, 将其中一部分光反射回环境中. 这里需要两种模型来描述这种反射: 反射光光谱的分布和方向的分布. 比如柠檬皮, 他主要吸收蓝色波长的光而反射红色和绿色波长的光, 所以当用白色光照射他时其最终呈现为黄色. 而皮肤则几乎在任何方向上都具有相同的颜色, 只在某一区域会出现一个高亮的部分. 与之相反从镜子中的点反射的光几乎完全取决于观察方向. 因为次表面散射现象的存在, 像皮肤, 树叶, 蜡等材质在反射上则更为复杂.
 
-为了描述光的反射机制, 人们提出了两种抽象模型: BRDF 和 BSSRDF. BRDF 忽略了次表面反射现象, 这种简化对于次表面反射现象很弱的材质而言误差很小但是效率很高. BSSRDF 在 BRDF 的基础上增加了对次表面反射现象的考量.
+为了描述光的反射机制, 人们提出了两种抽象模型: BRDF 和 BSSRDF. BRDF 忽略了次表面散射现象, 这种简化对于次表面散射现象很弱的材质而言误差很小但是效率很高. BSSRDF 在 BRDF 的基础上增加了对次表面散射现象的考量.
 
 ---
 
@@ -55,4 +55,20 @@ $$
 
 ## 2. BSSRDF
 
-待更新...
+双向散射表面反射分布函数 BSSRDF ( bidirectional scattering surface reflectance distribution function ) 描述了光线在例如蜡状物, 大理石, 皮肤表面等材质上的传输特性. 如下图所示, 其表现特征在于光线与某一点进入介质然而在离开介质表面时会产生较大的位置偏移.
+
+![BSSRDF](figures/5.6.2.png)
+
+这个分布函数与 BSDF 类似, 也是表示一个比例. 分布函数 $S(p_o, \omega_o, p_i, \omega_i)$ 表示针对点 $p_o$ 处且方向在 $\omega_o$ 上的出射微分辐射度与点 $p_i$ 处且方向在 $\omega_i$ 上的微分入射通量之比. BSSRDF 通常难以计算, 但是次表面散射这一特性又对现实中很多物体的外观有较大的影响.
+
+$$
+S(p_o, \omega_o, p_i, \omega_i) = \frac{dL_o(p_o, \omega_o)}{d\Phi(p_i, \omega_i)}
+$$
+
+BSSRDF 散射方程需要对表面积和入射方向进行积分, 并将 BSDF 的 2D 散射方程转化为 4D 积分, 对多维度积分( 大于 2 )会显著增加计算的复杂度.
+
+$$
+L_o(p_o, \omega_o) = \int_A\int_{H^2(\vec n)}S(p_o, \omega_o, p_i, \omega_i)L_i(p_i, \omega_i)|\cos \theta_i|d\omega_idA
+$$
+
+随着 $p_i$ 与 $p_o$ 距离的增加, S 值将显著减小, 这个特点在实现次表面散射算法的时候具有重大意义. 表面下方的光线传输可以使用与体积光传输相同的原理加以描述, 因此实际上次表面散射与云雾, 烟气等介质中的光线散射类似, 这些将在非常靠后的章节中介绍( 15 Light Transport II: Volume Rendering, Section 15.1 The Equation of Transfer )
